Added a filter for the uebungskatalog
filter added
uebungskatalog design changed
some bugfixes

--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -44,117 +44,78 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/detailUebungName"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_below="@+id/detailSchwierigkeit"
             android:text="@string/detailMG"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailMuskelGruppe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailUebungName"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_toRightOf="@id/staticDetailMuskelGruppe"
-            android:text="Test Muskelgruppe"
-            android:textColor="@color/darkTextColorLight"
-            />
-        <TextView
-            android:id="@+id/detailDifficulty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailUebungName"
-            android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Muskelgruppe"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_below="@+id/detailSchwierigkeit"
+            android:layout_alignStart="@+id/detailBeschreibung" />
 
-        <TextView
-            android:id="@+id/staticDetailDifficulty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailUebungName"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_toRightOf="@id/staticDetailDifficulty"
-            android:text="Schwierigkeit: "
-            android:textColor="@color/darkTextColorLight"
-            />
 
         <TextView
             android:id="@+id/detailEquipment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailMuskelGruppe"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/detailMuskelGruppe"
-            android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Equipment"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_alignEnd="@+id/detailUebungName"
+            android:layout_below="@+id/detailBeschreibung" />
 
         <TextView
             android:id="@+id/staticDetailEquipment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailMuskelGruppe"
-            android:layout_below="@+id/staticDetailMuskelGruppe"
             android:text="@string/detailEquip"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_below="@+id/detailBeschreibung"
+            android:layout_alignEnd="@+id/staticDetailBeschreibung" />
 
         <TextView
             android:id="@+id/detailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailZielGruppe"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailZielGruppe"
-            android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Beschreibung"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_below="@+id/detailUebungName"
+            android:layout_alignStart="@+id/detailEquipment" />
 
         <TextView
             android:id="@+id/staticDetailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailZielGruppe"
-            android:layout_below="@+id/detailZielGruppe"
             android:text="@string/detailDesc"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_below="@+id/detailUebungName"
+            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/staticDetailMuskelGruppe" />
 
         <TextView
             android:id="@+id/detailAnleitung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailBeschreibung"
-            android:layout_below="@id/detailBeschreibung"
             android:layout_marginRight="5dp"
             android:text="Test Anleitung"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_below="@+id/detailEquipment"
+            android:layout_alignStart="@+id/detailBeschreibung" />
 
         <TextView
             android:id="@+id/staticDetailAnleitung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailBeschreibung"
-            android:layout_below="@+id/detailBeschreibung"
             android:text="@string/detailAnl"
             android:textColor="@color/darkTextColorLight"
-            />
+            android:layout_alignEnd="@+id/staticDetailEquipment"
+            android:layout_below="@+id/detailEquipment" />
 
         <WebView
             android:id="@+id/detailUebungVideo"
@@ -170,13 +131,22 @@
             />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/staticDetailSchwierigkeit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/detailAnl"
+            android:text="Schwierigkeit:"
+            android:layout_below="@+id/detailAnleitung"
             android:textColor="@color/darkTextColorLight"
-            android:layout_below="@+id/staticDetailEquipment"
-            android:layout_alignEnd="@+id/detailAnleitung" />
+            android:layout_alignEnd="@id/staticDetailAnleitung" />
+
+        <TextView
+            android:id="@+id/detailSchwierigkeit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test Schwierigkeit"
+            android:textColor="@color/darkTextColorLight"
+            android:layout_below="@+id/detailAnleitung"
+            android:layout_alignStart="@+id/detailAnleitung" />
 
     </RelativeLayout>
 </ScrollView>
