--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
                 android:layout_height="match_parent"
     >
     <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
@@ -16,4 +17,16 @@
         android:layout_alignParentTop="true"
         />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabFilter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@color/darkPrimary"
+        app:rippleColor="@color/darkSecondary"
+        app:elevation="100dp" />
 </RelativeLayout>
