--- a/FIPLY/App/app/src/main/res/layout/playlist_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/playlist_item.xml
@@ -4,5 +4,6 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="4dp"
-          android:textColor="@color/darkPrimary">
+          android:textColor="@color/darkPrimary"
+          android:textSize="35dp">
 </TextView>
