Added Layer to scan for deletions of local music

--- a/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
@@ -46,6 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/linearLayoutPlaylist"
         android:text="@string/etPlName"
+        android:background="@color/darkPrimary"
+        android:textColor="@color/darkTextColorDark"
+        android:textSize="20dp"
+        android:padding="5dp"
         />
 
     <ListView
