--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingsplantest.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingsplantest.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal">
+    android:layout_gravity="center_horizontal"
+    android:scaleType="fitXY">
 
     <RadioButton
        android:layout_width="wrap_content"
