--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -3,10 +3,17 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-    >
+                android:orientation="horizontal">
+
+
+    <LoginButton
+        android:layout_below="@+id/spGender"
+        android:layout_alignStart="@+id/etName">
+
+    </LoginButton>
 
     <EditText
+
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
