--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
@@ -34,7 +34,8 @@
         android:clickable="true"
         android:layout_row="1"
         android:layout_column="0"
-        android:background="@color/darkSecondary"/>
+        android:background="@color/darkSecondary"
+        android:layout_columnSpan="1" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         android:layout_gravity="center_horizontal"
         android:visibility="visible"
         android:layout_row="1"
-        android:layout_column="0"/>
+        android:layout_column="0"
+        android:layout_columnSpan="1" />
 
     <Button
         android:layout_width="wrap_content"
@@ -54,13 +56,13 @@
         android:layout_row="2"
         android:layout_column="0" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reset Filter"
-        android:id="@+id/btResetFilter"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="2"
-        android:layout_column="0" />
-</GridLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reset Filter"
+            android:id="@+id/btResetFilter"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="2"
+            android:layout_column="1" />
+    </GridLayout>
 </ScrollView>
