--- a/FIPLY/App/app/src/main/res/layout/fragment_sessionsettings.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_sessionsettings.xml
@@ -11,33 +11,29 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/sessionsettingstitle"
             android:id="@+id/sessionsettingstitle"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_marginTop="30dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/darkPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text=""
             android:id="@+id/sessionsettingwelcome"
-            android:layout_below="@+id/sessionsettingstitle"
-            android:layout_marginTop="45dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
+            android:textSize="20dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/darkPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text=""
             android:id="@+id/sessionsettinguebungen"
-            android:layout_below="@+id/sessionsettingwelcome"
-            android:layout_alignStart="@+id/sessionsettingstitle"
-            android:layout_marginTop="28dp" />
+            android:layout_marginTop="40dp"
+            android:textColor="@color/darkPrimary" />
 
         <Button
             android:layout_width="wrap_content"
@@ -46,6 +42,15 @@
             android:id="@+id/choosedaybt"
             android:layout_below="@+id/sessionsettinguebungen"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/gotosession"
+            android:layout_marginBottom="93dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignEnd="@+id/sessionsettingstitle" />
 
     </RelativeLayout>
 </LinearLayout>
