--- a/FIPLY/App/app/src/main/res/layout/fragment_sessionsettings.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_sessionsettings.xml
@@ -16,7 +16,8 @@
             android:id="@+id/sessionsettingstitle"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/darkPrimary" />
+            android:textColor="@color/darkPrimary"
+            android:textSize="40dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,22 +26,42 @@
             android:id="@+id/sessionsettingwelcome"
             android:textSize="20dp"
             android:layout_marginTop="20dp"
-            android:textColor="@color/darkPrimary" />
+            android:textColor="@color/darkPrimary"
+            android:layout_below="@+id/sessionsettingstitle"
+            android:layout_centerHorizontal="true"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/sessionsettinguebungen"
-            android:layout_marginTop="40dp"
-            android:textColor="@color/darkPrimary" />
+            android:textSize="20dp"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/darkPrimary"
+            android:layout_below="@+id/sessionsettingwelcome"
+            android:layout_centerHorizontal="true"
+            android:layout_alignLeft="@+id/sessionsettingwelcome"
+            android:layout_alignRight="@+id/sessionsettingwelcome"
+            android:gravity="center"/>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:progressDrawable="@drawable/progressbar"
+            android:layout_alignLeft="@+id/sessionsettingwelcome"
+            android:layout_alignRight="@+id/sessionsettingwelcome"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/sessionsettingwelcome"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choosedaybt"
             android:id="@+id/choosedaybt"
-            android:layout_below="@+id/sessionsettinguebungen"
+            android:layout_below="@+id/sessionsettingwelcome"
             android:layout_centerHorizontal="true" />
 
         <Button
