Added Statistics and a FB Login Button
-statistics fragment added
-statistics repo + db table + db contract added
-fb login button added

-bunch of bugs in this iteration fixes tomorrow.

--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -70,4 +70,15 @@
         android:textSize="25dp"
         />
 
+    <Button
+        android:id="@+id/btStartStatistic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@color/darkMenuButtons"
+        android:text="@string/startStatistic"
+        android:textSize="25dp"
+        />
+
 </LinearLayout>
