--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -6,11 +6,6 @@
                 android:orientation="horizontal">
 
 
-    <LoginButton
-        android:layout_below="@+id/spGender"
-        android:layout_alignStart="@+id/etName">
-
-    </LoginButton>
 
     <EditText
 
@@ -22,6 +17,12 @@
         android:ems="10"
         android:inputType="textPersonName"
         />
+
+    <com.facebook.login.widget.LoginButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spGender"
+        android:id="@+id/fbLoginButton" />
 
     <Spinner
         android:id="@+id/spGender"
